[gd_scene load_steps=6 format=2]

[ext_resource path="res://authenticate_user/authenticate_user.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/PressStart2P-vaV7_48pt.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/textures/PanelTexture.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/outline_key_black_24dp.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/outline_keyboard_double_arrow_up_black_24dp.png" type="Texture" id=5]

[node name="Authenticate_User" type="Node"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 701.0, 665.0 ],
"_edit_vertical_guides_": [ 898.0, 1023.0 ]
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1172.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignInPanel" type="Panel" parent="CenterContainer"]
margin_left = 640.0
margin_top = 426.0
margin_right = 1280.0
margin_bottom = 746.0
rect_min_size = Vector2( 640, 320 )

[node name="TextureRect" type="TextureRect" parent="CenterContainer/SignInPanel"]
anchor_right = 0.738
margin_right = 167.942
margin_bottom = 320.0
rect_min_size = Vector2( 641, 320 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CenterContainer/SignInPanel"]
margin_right = 640.0
margin_bottom = 70.0
rect_min_size = Vector2( 641, 320 )
color = Color( 0.172549, 0.0745098, 0.12549, 0.878431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterPasswordLabel" type="Label" parent="CenterContainer/SignInPanel/ColorRect"]
anchor_bottom = 10.0
margin_left = 1.0
margin_top = 18.0
margin_right = 642.0
margin_bottom = -3111.0
custom_colors/font_color = Color( 0.654902, 0.678431, 0.776471, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -3
custom_constants/shadow_offset_y = -3
custom_fonts/font = ExtResource( 2 )
text = "Enter Password
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/SignInPanel/ColorRect"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 641, 320 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordEdit" type="LineEdit" parent="CenterContainer/SignInPanel/ColorRect/CenterContainer"]
margin_left = 195.0
margin_top = 132.0
margin_right = 445.0
margin_bottom = 188.0
rect_min_size = Vector2( 250, 56 )
secret = true
right_icon = ExtResource( 4 )
placeholder_text = "Password"
placeholder_alpha = 0.207

[node name="SignInButton" type="Button" parent="CenterContainer/SignInPanel/ColorRect"]
margin_left = 260.0
margin_top = 242.0
margin_right = 380.0
margin_bottom = 272.0
action_mode = 0
text = "Sign In"
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/SignInPanel/ColorRect/SignInButton" to="." method="_on_SignInButton_pressed"]
